--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,4 +61,9 @@ management.server.port=8080
 #Move Actuator to a separate port
 #management.server.port=8080
 
-
+# ===============================
+# RAZORPAY CONFIG
+# ===============================
+razorpay.key-id=${RAZORPAY_KEY_ID}
+razorpay.key-secret=${RAZORPAY_KEY_SECRET}
+razorpay.webhook-secret=dummy_for_local_dev
